[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools<66.0"]

[dependency-groups]
dev = [
  "coverage",
  "django-cors-headers>=3.11.0",
  "django-debug-toolbar>=1.11",
  "django-silk",
  "ipdb",
  "ipython",
  "pudb",
  "ruff",
  "toml-sort>=0.23.1",
  "werkzeug==0.16.1"
]
docs = [
  "mkdocs",
  "mkdocs-bootswatch",
  "mkdocs-material",
  "mkdocs_bootstrap"
]
prod = [
  "gunicorn"
]
test = [
  "coverage",
  "coveralls",
  "ddt",
  "django-plainpasswordhasher",
  "mock==4.0.2",
  "sphinx"
]

[project]
dependencies = [
  "Babel==2.11.0",
  "Faker==0.9.0",
  "Markdown==3.2.1",
  "Pillow",
  "Unidecode==0.04.18",
  "debtcollector==1.3.0",
  "django-auth-ldap~=2.0",
  "django-cryptography",
  "django-extensions==3.1.5",
  "django-filter==25.1",
  "django-import-export==3.3.9",
  "django-money==3.4.1",
  "django-mptt==0.14",
  "django-prometheus==2.2.0",
  "django-redis==5.0.0",
  "django-reversion~=4.0.2",
  "django-rq==2.8.0",
  "django-sitetree==1.18.0",
  "django-taggit==3.1.0",
  "django-threadlocals==0.8",
  "djangorestframework==3.15.0",
  "djangorestframework_xml==2.0.0",
  "django~=4.2.0",
  "dogpile-cache==1.3.4",
  "drf-nested-routers==0.92.5",
  "factory-boy==3.2.1",
  "funcsigs==0.4",
  "hiredis>=3.1.0",
  "iso8601==0.1.11",
  "keystoneauth1",
  "monotonic==0.6",
  "msgpack-python==0.4.7",
  "mysqlclient~=2.0.1",
  "netaddr==0.10.1",
  "netifaces",
  "openpyxl==2.6.4",
  "openstacksdk==1.5.0",
  "oslo.config~=9.7.1",
  "oslo.i18n",
  "oslo.serialization",
  "oslo.utils~=8.2",
  "pbr",
  "positional==1.0.1",
  "prettytable==0.7.2",
  "psycopg2-binary>=2.9.10",
  "pyhermes~=0.6.0",
  "python-dateutil==2.9.0",
  "python-ironicclient",
  "python-keystoneclient",
  "python-novaclient==3.2.0",
  "pytz==2025.1",
  "raven",
  "redis~=4.0",
  "requests-oauthlib==1.3.0",
  "requests==2.32.4",
  "rq==1.16.2",
  "setuptools<66.0",
  "simplejson==3.8.2",
  "six==1.16.0",
  "social-auth-app-django>=5.4.3",
  "statsd<4.0.0",
  "stevedore",
  "tblib>=3.1.0",
  "typing==3.6.6",
  "wrapt==1.10.6"
]
dynamic = [
  "authors",
  "classifiers",
  "description",
  "entry-points",
  "keywords",
  "license",
  "readme",
  "scripts"
]
name = "Ralph"
requires-python = ">=3.10.0,<3.11"
version = "3"

[tool.ruff]
exclude = [
  "*local.py",
  "*migrations*"
]

[tool.ruff.lint]
ignore = []
# Add "B" (bugbear) in the future
select = ["E4", "E7", "E9", "F"]

[tool.uv]
default-groups = ["dev", "test"]

[tools.ruff.format]
line-ending = "auto"
line-length = 88
